--- a/bigwebsite/templates/videolist.jinja2
+++ b/bigwebsite/templates/videolist.jinja2
@@ -1,5 +1,5 @@
-	<p>remove video</p>
-	{% for video in videohtml %}
-		<br><form class="formdelete" action="" method="post"><button type="submit" name="video-submit" value="videodel{{ video.num|safe }}">delete video {{ video.num|safe }}</button></form>
-{{ video.html|safe }}
-	{% endfor %}
+<p>remove video</p>
+{% for video in videohtml %}
+<br><form class="videodelete" action="" method="post" accept-charset="utf-8" enctype="multipart/form-data"><button type="submit" name="video-submit" value="videodel{{ video.num|safe }}">delete video {{ video.num|safe }}</button></form>
+{{ video.thumbnail|safe }}
+{% endfor %}
