--- a/bigwebsite/templates/adminpage.jinja2
+++ b/bigwebsite/templates/adminpage.jinja2
@@ -7,6 +7,7 @@
 <html>
 <head>
 	<title>login</title>
+	<link rel=icon href="content/favicon.ico" type="image/x-icon" />
 </head>
 <body>
 <div style="margin: 0 auto; width: 10em; height: 10em;">
