--- a/bigwebsite/templates/contact.jinja2
+++ b/bigwebsite/templates/contact.jinja2
@@ -12,7 +12,7 @@
 		<!-- doorbell.wav sound used for the doorbell on this page was
 		found at https://freesound.org/people/InspectorJ/sounds/415510/ 
 		and all credit for the sound goes to the original author. -->
-		<audio id="audio" src="contact/content/doorbell.wav" ></audio>
+		<audio id="audio" src="contact/content/doorbell.mp3" ></audio>
 	</head>
 	<body>
 		<div id="container">
@@ -26,9 +26,9 @@
 		<div id="dummy" style="opacity:0;position: absolute;height: 9vw"></div>
 		<input id="prompt" type="text" style="opacity: 0;position: fixed;bottom: 0;">
 	</body>
-	<script src="/content/ElementQueries.js" type="text/javascript"></script>
-	<script src="/content/ResizeSensor.js" type="text/javascript"></script>
-	<script src="/content/jquery-3.3.1.min.js" type="text/javascript"></script>
-	<script src="contact/content/contact.js" type="text/javascript"></script>
+	<script src="/scripts/ElementQueries.js" type="text/javascript"></script>
+	<script src="/scripts/ResizeSensor.js" type="text/javascript"></script>
+	<script src="/scripts/jquery.js" type="text/javascript"></script>
+	<script src="/scripts/contact.js" type="text/javascript"></script>
 	<img src="contact/content/doorbellpressed.png" style="display:none;">
 </html>
