--- a/bigwebsite/templates/noscript.jinja2
+++ b/bigwebsite/templates/noscript.jinja2
@@ -29,8 +29,6 @@
 			</div>
 		</div>
 	</body>
-	<script type="text/javascript">
-	{% include "scripts/redir.js" %}
-	</script>
+	<script src="/scripts/redir.js" type="text/javascript"></script>
 </html>
 
