--- a/webroot/videos/content/stylesheet.css
+++ b/webroot/videos/content/stylesheet.css
@@ -1,58 +1,79 @@
 html,body{
-  margin: 0;
-  padding: 0;
-  -webkit-padding: 0;
-  cursor: url("/content/cursor.gif"), auto;
-}
-
-body{
-  padding-top: 10%;
+	margin: 0;
+	padding: 0;
+	-webkit-padding: 0;
+	cursor: url("/content/cursor.gif"), auto;
+	background-color: #fcfefb;
 }
 
 iframe,.container div,.explode{
-  position: relative;
-  z-index: 0 !important;
-  cursor: auto;
-  height: 46vw;
-  width: 80vw;
-  max-width: 112vh;
-  max-height: 63vh;
+	position: relative;
+	z-index: 0 !important;
+	cursor: auto;
+	height: 46vw;
+	width: 80vw;
+	max-width: 112vh;
+	max-height: 62vh;
+	margin-bottom: 0.1vh;
 }
 
 object{
-  position: relative;
-  z-index: 0 !important;
+	position: relative;
+	z-index: 0 !important;
+}
+.border,.thumbnail,.container{
+	height: 46.1vw;
+	max-height: 63.1vh;
+}
+
+.border,.thumbnail{
+	width: 80.3vw;
+	max-width: 112.3vh;
 }
 
 .border{
-  z-index: 99 !important;
-  cursor: auto;
-  height: 46.1vw;
-  width: 80.3vw;
-  max-width: 112.3vh;
-  max-height: 63.1vh;
-  position: absolute;
-  pointer-events: none;
+	z-index: 99 !important;
+	cursor: auto;
+	position: absolute;
+	pointer-events: none;
 }
 
+.thumbnail{
+	cursor: url("/content/selectcursor.gif"), auto;
+}
+
+.border-nonvis,.ytframe-nonvis,.thumbnail-nonvis{
+	display: none;
+}
 
 .container{
-  width: 100%;
-  text-align: center;
-  padding-top: 1em;
-  -webkit-padding-top: 1em;
+	width: 100%;
+	text-align: center;
+	padding-top: 1em;
+	-webkit-padding-top: 1em;
+	margin-bottom: 10vh;
+}
+
+.container:first-of-type{
+	margin-top: 20vh;
 }
 
 @supports (display: grid){
-  p{
-    width: auto;
-  }
-  
-  .container{
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 100vh;
-    grid-gap: 0px 0px;
-  }
+	p{
+		width: auto;
+	}
+	
+	.container{
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 100vh;
+		grid-gap: 0px 0px;
+	}
+}
+
+@media (orientation: portrait){
+	.container:first-of-type{
+		margin-top: 10vh;
+	}
 }
 
 #backbutton{
